config-sync/cluster-sync-root/first-cluster-specific-ns-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rohan
  annotations:
    configsync.gke.io/cluster-name-selector: autopilot-cluster-prod
